3.0.17: - Fix bug where directory structure would not collapse if folder name was formatted

--- a/jquery.stickynotes.css
+++ b/jquery.stickynotes.css
@@ -106,7 +106,7 @@
   background-image: url('chrome-extension://__MSG_@@extension_id__/images/file.svg');
 }
 
-.wpsn-md-node.wpsn-md-collapsed + ul {
+.wpsn-md-node.wpsn-md-collapsed ~ ul {
   display: none;
 }
 
